<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tour_background">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:layout_gravity="center"
           android:layout_marginTop="55dp"
           android:layout_marginEnd="153dp"
           android:fontFamily="@font/poppins_medium"
           android:text="@string/featured"
           android:textAllCaps="true"
           android:textColor="@color/black"
           android:textSize="26sp"></TextView>

       <androidx.cardview.widget.CardView
           android:id="@+id/cardView"
           android:layout_width="350dp"
           android:layout_height="205dp"
           android:layout_alignParentTop="true"
           android:layout_marginLeft="30dp"
           android:layout_marginTop="115dp"
           app:cardBackgroundColor="@color/transparent">

           <ImageView
               android:layout_width="350dp"
               android:layout_height="205dp"
               android:src="@drawable/featured_main_picture" />

       </androidx.cardview.widget.CardView>

       <TextView
           android:id="@+id/featured_reservation"
           android:layout_below="@+id/cardView"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="15dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/open_sans_semibold"
           android:text="@string/featured_reservation"/>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recycle_featured"
           android:layout_width="384dp"
           android:layout_height="wrap_content"
           android:layout_below="@+id/cardView"
           android:layout_marginLeft="15dp"
           android:layout_marginTop="30dp"
           android:layout_marginRight="15dp" />

       <Button
           android:id="@+id/featured_cities"
           android:layout_width="141dp"
           android:layout_height="wrap_content"
           android:layout_below="@id/recycle_featured"
           android:layout_alignParentStart="true"
           android:layout_marginStart="44dp"
           android:layout_marginTop="42dp"
           android:background="@drawable/button_background"
           android:fontFamily="@font/open_sans_semibold"
           android:text="@string/featured_cities"
           android:textAllCaps="false"
           android:textSize="16sp"
           android:textColor="@color/white" />


       <Button
           android:id="@+id/featured_restaurants"
           android:layout_width="141dp"
           android:layout_height="wrap_content"
           android:layout_below="@id/recycle_featured"
           android:layout_alignParentStart="true"
           android:layout_marginStart="216dp"
           android:layout_marginTop="41dp"
           android:background="@drawable/button_background"
           android:fontFamily="@font/open_sans_semibold"
           android:text="@string/featured_restaurants"
           android:textAllCaps="false"
           android:textColor="@color/white"
           android:textSize="16sp" />


   </RelativeLayout>
</LinearLayout>