<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".Login.Opening" >

    <RelativeLayout
        android:layout_width="700dp"
        android:layout_height="631dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp">


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="446dp"
            android:layout_marginTop="150dp">


            <TextView
                android:id="@+id/title"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/poppins_medium1"
                android:text="@string/title"
                android:textColor="@color/text_color"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

          <RelativeLayout
              android:layout_marginTop="300dp"
              android:layout_width="400dp"
              android:layout_height="400dp">


              <TextView
                  android:id="@+id/text1"
                  android:layout_width="270dp"
                  android:layout_height="99dp"
                  android:layout_marginStart="50dp"
                  android:fontFamily="@font/roboto_light"
                  android:text="@string/desc"
                  android:textColor="@color/text_color"
                  android:textSize="16sp" />

              <ImageView
                  android:layout_below="@+id/text1"
                  android:layout_centerInParent="true"
                  android:layout_width="100dp"
                  android:layout_height="30dp"
                  android:src="@drawable/rating" />

              <Button
                  android:id="@+id/get_started"
                  android:layout_width="251dp"
                  android:layout_height="48dp"
                  android:layout_marginLeft="50dp"
                  android:layout_marginTop="200dp"
                  android:background="@drawable/button_background"
                  android:fontFamily="@font/open_sans_semibold"
                  android:text="@string/started"
                  android:textAllCaps="false"
                  android:textColor="@color/text_color"
                  android:textSize="18sp" />



          </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>