<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tour_background"
    tools:context=".Country.DisplayMoreCountry" >

    <RelativeLayout
        android:layout_width="387dp"
        android:layout_height="880dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/addNotes"
            android:layout_width="44dp"
            android:layout_height="45dp"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/note" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="222dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/details_coun"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_back_button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_below="@+id/back_button"
            android:layout_width="380dp"
            android:layout_height="225dp"
            style="@style/CardView.Light"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            android:elevation="3dp"
            android:padding="5dp"
            android:layout_marginTop="65dp">

        <ImageView
            android:id="@+id/show_country_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/london" />

        </androidx.cardview.widget.CardView>



        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/imageCard"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_capital"/>

        <TextView
            android:id="@+id/textViewCapitalCity"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageCard"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/cap_city"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/textViewCapitalCity"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_money"/>

        <TextView
            android:id="@+id/textViewCurrency"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewCapitalCity"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/currency_display"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/textViewCurrency"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_language"/>

        <TextView
            android:id="@+id/textViewLanguage"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewCurrency"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/language_display"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/real"
            android:layout_width="350dp"
            android:layout_height="614dp"
            android:layout_below="@+id/textViewLanguage"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDescription"
                android:layout_width="600dp"
                android:layout_height="220dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                app:cardBackgroundColor="@color/buttonEndColor"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/description"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="335dp"
                android:layout_height="418dp"
                android:layout_marginTop="200dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/country_city_list"
                        android:layout_width="222dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/other_city"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ListView
                        android:id="@+id/list_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="100dp" />

                </RelativeLayout>


            </LinearLayout>






        </RelativeLayout>



</RelativeLayout>


</ScrollView>